2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Put symlink at the end of the node and fix a potential
	memory corruption.

	* grub-core/fs/iso9660.c (grub_fshelp_node): New field have_symlink.
	Make symlink into an array.
	(set_rockridge): Set have_symlink and alloc_dirents.
	(grub_iso9660_read_symlink): Use new layout.
	(grub_iso9660_iterate_dir): Fix memory corruption.
	Use new layout.
	(grub_iso9660_dir): Set have_symlink.
	(grub_iso9660_open): Likewise.

2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove local keyword.

	* util/grub-mkconfig_lib.in (version_test_numeric): Remove local.
	(version_test_gt): Likewise.
	(version_find_latest): Likewise.
	(gettext_printf): Likewise.
	* util/grub.d/10_windows.in (get_os_name_from_boot_ini): Likewise.

2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/zfs/zfs.c (zfs_mount): Fix spurious warning.

2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix ZFS memory and resource leaks.

	* grub-core/fs/zfs/zfs.c (fill_vdev_info_real): New paramter inserted.
	All users updated.
	Free type on exit.
	(fill_vdev_info): New parameter inserted. All users updated.
	(check_pool_label): Likewise.
	(scan_disk): Likewise.
	(scan_devices): Close non-inserted disks.
	(fzap_iterate): Free l.
	(unmount_device): Free children descripto memory.

2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Fix grub_strncat
	argument (access out of bounds).

2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_read_logical): Fix RAID10 logic for
	>= 6 drives.

2011-11-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/i386/netbsd_bootinfo.h (grub_netbsd_btinfo_bootwedge):
	Fix declaration.

2011-11-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix several memory leaks.

	* grub-core/fs/btrfs.c (grub_btrfs_dir): Fix memory leak.
	* grub-core/fs/cpio.c (grub_cpio_find_file): Likewise.